creating queue entity
