# src/services/inventory/queue/dto/queue_import.go
@@ -1,0 +1,6 @@
+package dto
+
+type QueueImportRequest struct {
+	ClusterId int32  `json:"ClusterId"`
+	QueueName string `json:"QueueName"`
+}
